oxiplate-derive/tests/broken/char/escaped-eof.stderr
error: End of file encountered while parsing a character literal
 --> tests/broken/char/escaped-eof.rs:4:24
  |
4 | #[oxiplate_inline(r"{{ '\")]
  |                        ^^
